srv/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://github.com/kubernetes/ingress/tree/master/controllers/nginx
# https://github.com/kubernetes/ingress/blob/master/controllers/nginx/configuration.md

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-protocols: "TLSv1.2"
    ingress.kubernetes.io/ssl-ciphers: "HIGH:!aNULL:!MD5"
spec:
  tls:
  - secretName: ingress-nginx
  rules:
  - host: netbox.sj.ifsc.ed.br
    http:
      paths:
      - path: /
        backend:
          serviceName: netbox
          servicePort: 80
  - host: rocketchat.sj.ifsc.edu.br
    http:
      paths:
      - path: /
        backend:
          serviceName: rocketchat
          servicePort: 3000
